tests/kuttl-test/best-practices/t02-disallow-empty-ingress-host/02-install.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: |
    if kubectl apply -f ingress.yaml
    then 
      echo "Tested failed. Resource was allowed."
      exit 1 
    else 
      echo "Test succeeded. Resource was blocked."
      exit 0
    fi
