tests/kuttl-test/best-practices/t02-disallow-empty-ingress-host/03-errors.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
